# serializer version: 1
# name: test_data_color_exibble_snap_1
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">0.1111</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">apricot</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">one</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">2015-01-15</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">13:35</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">2018-01-01 02:22</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">49.95</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">row_1</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">2.222</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">banana</td>
    <td style="color: #FFFFFF; background-color: #c4495e;" class="gt_row gt_left">two</td>
    <td style="color: #FFFFFF; background-color: #c4495e;" class="gt_row gt_right">2015-02-15</td>
    <td style="color: #FFFFFF; background-color: #c4495e;" class="gt_row gt_right">14:40</td>
    <td style="color: #FFFFFF; background-color: #c4495e;" class="gt_row gt_right">2018-02-02 14:33</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">17.95</td>
    <td style="color: #FFFFFF; background-color: #c4495e;" class="gt_row gt_left">row_2</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">33.33</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">coconut</td>
    <td style="color: #000000; background-color: #80b256;" class="gt_row gt_left">three</td>
    <td style="color: #000000; background-color: #80b256;" class="gt_row gt_right">2015-03-15</td>
    <td style="color: #000000; background-color: #80b256;" class="gt_row gt_right">15:45</td>
    <td style="color: #000000; background-color: #80b256;" class="gt_row gt_right">2018-03-03 03:44</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1.39</td>
    <td style="color: #000000; background-color: #80b256;" class="gt_row gt_left">row_3</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">444.4</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">durian</td>
    <td style="color: #000000; background-color: #39acaf;" class="gt_row gt_left">four</td>
    <td style="color: #000000; background-color: #39acaf;" class="gt_row gt_right">2015-04-15</td>
    <td style="color: #000000; background-color: #39acaf;" class="gt_row gt_right">16:50</td>
    <td style="color: #000000; background-color: #39acaf;" class="gt_row gt_right">2018-04-04 15:55</td>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">65100.0</td>
    <td style="color: #000000; background-color: #39acaf;" class="gt_row gt_left">row_4</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">5550.0</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left"><NA></td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_left">five</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_right">2015-05-15</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_right">17:55</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_right">2018-05-05 04:00</td>
    <td style="color: #FFFFFF; background-color: #1f0b0f;" class="gt_row gt_right">1325.81</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_left">row_5</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #808080;" class="gt_row gt_right"><NA></td>
    <td style="color: #000000; background-color: #808080;" class="gt_row gt_left">fig</td>
    <td style="color: #000000; background-color: #6494d6;" class="gt_row gt_left">six</td>
    <td style="color: #000000; background-color: #6494d6;" class="gt_row gt_right">2015-06-15</td>
    <td style="color: #000000; background-color: #6494d6;" class="gt_row gt_right"><NA></td>
    <td style="color: #000000; background-color: #6494d6;" class="gt_row gt_right">2018-06-06 16:11</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">13.255</td>
    <td style="color: #000000; background-color: #6494d6;" class="gt_row gt_left">row_6</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #873241;" class="gt_row gt_right">777000.0</td>
    <td style="color: #FFFFFF; background-color: #873241;" class="gt_row gt_left">grapefruit</td>
    <td style="color: #000000; background-color: #d73992;" class="gt_row gt_left">seven</td>
    <td style="color: #000000; background-color: #d73992;" class="gt_row gt_right"><NA></td>
    <td style="color: #000000; background-color: #d73992;" class="gt_row gt_right">19:10</td>
    <td style="color: #000000; background-color: #d73992;" class="gt_row gt_right">2018-07-07 05:22</td>
    <td style="color: #000000; background-color: #808080;" class="gt_row gt_right"><NA></td>
    <td style="color: #000000; background-color: #d73992;" class="gt_row gt_left">row_7</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">8880000.0</td>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_left">honeydew</td>
    <td style="color: #000000; background-color: #eac221;" class="gt_row gt_left">eight</td>
    <td style="color: #000000; background-color: #eac221;" class="gt_row gt_right">2015-08-15</td>
    <td style="color: #000000; background-color: #eac221;" class="gt_row gt_right">20:20</td>
    <td style="color: #000000; background-color: #eac221;" class="gt_row gt_right"><NA></td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">0.44</td>
    <td style="color: #000000; background-color: #eac221;" class="gt_row gt_left">row_8</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_left">grp_b</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_exibble_snap_2
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td class="gt_row gt_left">one</td>
    <td class="gt_row gt_right">2015-01-15</td>
    <td class="gt_row gt_right">13:35</td>
    <td class="gt_row gt_right">2018-01-01 02:22</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    <td class="gt_row gt_left">row_1</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td class="gt_row gt_left">two</td>
    <td class="gt_row gt_right">2015-02-15</td>
    <td class="gt_row gt_right">14:40</td>
    <td class="gt_row gt_right">2018-02-02 14:33</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">17.95</td>
    <td class="gt_row gt_left">row_2</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td class="gt_row gt_left">three</td>
    <td class="gt_row gt_right">2015-03-15</td>
    <td class="gt_row gt_right">15:45</td>
    <td class="gt_row gt_right">2018-03-03 03:44</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">1.39</td>
    <td class="gt_row gt_left">row_3</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td class="gt_row gt_left">four</td>
    <td class="gt_row gt_right">2015-04-15</td>
    <td class="gt_row gt_right">16:50</td>
    <td class="gt_row gt_right">2018-04-04 15:55</td>
    <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">65100.0</td>
    <td class="gt_row gt_left">row_4</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">5550.0</td>
    <td class="gt_row gt_left"><NA></td>
    <td class="gt_row gt_left">five</td>
    <td class="gt_row gt_right">2015-05-15</td>
    <td class="gt_row gt_right">17:55</td>
    <td class="gt_row gt_right">2018-05-05 04:00</td>
    <td style="color: #000000; background-color: #fa0300;" class="gt_row gt_right">1325.81</td>
    <td class="gt_row gt_left">row_5</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #808080;" class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">fig</td>
    <td class="gt_row gt_left">six</td>
    <td class="gt_row gt_right">2015-06-15</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">2018-06-06 16:11</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">13.255</td>
    <td class="gt_row gt_left">row_6</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #e90b00;" class="gt_row gt_right">777000.0</td>
    <td class="gt_row gt_left">grapefruit</td>
    <td class="gt_row gt_left">seven</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">19:10</td>
    <td class="gt_row gt_right">2018-07-07 05:22</td>
    <td style="color: #000000; background-color: #808080;" class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">row_7</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">8880000.0</td>
    <td class="gt_row gt_left">honeydew</td>
    <td class="gt_row gt_left">eight</td>
    <td class="gt_row gt_right">2015-08-15</td>
    <td class="gt_row gt_right">20:20</td>
    <td class="gt_row gt_right"><NA></td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">0.44</td>
    <td class="gt_row gt_left">row_8</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_exibble_snap_3
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td class="gt_row gt_left">one</td>
    <td class="gt_row gt_right">2015-01-15</td>
    <td class="gt_row gt_right">13:35</td>
    <td class="gt_row gt_right">2018-01-01 02:22</td>
    <td style="color: #FFFFFF; background-color: #008000;" class="gt_row gt_right">49.95</td>
    <td class="gt_row gt_left">row_1</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td class="gt_row gt_left">two</td>
    <td class="gt_row gt_right">2015-02-15</td>
    <td class="gt_row gt_right">14:40</td>
    <td class="gt_row gt_right">2018-02-02 14:33</td>
    <td style="color: #FFFFFF; background-color: #a32e00;" class="gt_row gt_right">17.95</td>
    <td class="gt_row gt_left">row_2</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td class="gt_row gt_left">three</td>
    <td class="gt_row gt_right">2015-03-15</td>
    <td class="gt_row gt_right">15:45</td>
    <td class="gt_row gt_right">2018-03-03 03:44</td>
    <td style="color: #000000; background-color: #f80400;" class="gt_row gt_right">1.39</td>
    <td class="gt_row gt_left">row_3</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td class="gt_row gt_left">four</td>
    <td class="gt_row gt_right">2015-04-15</td>
    <td class="gt_row gt_right">16:50</td>
    <td class="gt_row gt_right">2018-04-04 15:55</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    <td class="gt_row gt_left">row_4</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">5550.0</td>
    <td class="gt_row gt_left"><NA></td>
    <td class="gt_row gt_left">five</td>
    <td class="gt_row gt_right">2015-05-15</td>
    <td class="gt_row gt_right">17:55</td>
    <td class="gt_row gt_right">2018-05-05 04:00</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">1325.81</td>
    <td class="gt_row gt_left">row_5</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">fig</td>
    <td class="gt_row gt_left">six</td>
    <td class="gt_row gt_right">2015-06-15</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">2018-06-06 16:11</td>
    <td style="color: #FFFFFF; background-color: #bb2200;" class="gt_row gt_right">13.255</td>
    <td class="gt_row gt_left">row_6</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">777000.0</td>
    <td class="gt_row gt_left">grapefruit</td>
    <td class="gt_row gt_left">seven</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">19:10</td>
    <td class="gt_row gt_right">2018-07-07 05:22</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">row_7</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">8880000.0</td>
    <td class="gt_row gt_left">honeydew</td>
    <td class="gt_row gt_left">eight</td>
    <td class="gt_row gt_right">2015-08-15</td>
    <td class="gt_row gt_right">20:20</td>
    <td class="gt_row gt_right"><NA></td>
    <td style="color: #000000; background-color: #fd0100;" class="gt_row gt_right">0.44</td>
    <td class="gt_row gt_left">row_8</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_exibble_snap_4
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td class="gt_row gt_left">one</td>
    <td class="gt_row gt_right">2015-01-15</td>
    <td class="gt_row gt_right">13:35</td>
    <td class="gt_row gt_right">2018-01-01 02:22</td>
    <td style="color: #000000; background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    <td class="gt_row gt_left">row_1</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td class="gt_row gt_left">two</td>
    <td class="gt_row gt_right">2015-02-15</td>
    <td class="gt_row gt_right">14:40</td>
    <td class="gt_row gt_right">2018-02-02 14:33</td>
    <td style="color: #FFFFFF; background-color: #5c5200;" class="gt_row gt_right">17.95</td>
    <td class="gt_row gt_left">row_2</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td class="gt_row gt_left">three</td>
    <td class="gt_row gt_right">2015-03-15</td>
    <td class="gt_row gt_right">15:45</td>
    <td class="gt_row gt_right">2018-03-03 03:44</td>
    <td style="color: #FFFFFF; background-color: #077c00;" class="gt_row gt_right">1.39</td>
    <td class="gt_row gt_left">row_3</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td class="gt_row gt_left">four</td>
    <td class="gt_row gt_right">2015-04-15</td>
    <td class="gt_row gt_right">16:50</td>
    <td class="gt_row gt_right">2018-04-04 15:55</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    <td class="gt_row gt_left">row_4</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">5550.0</td>
    <td class="gt_row gt_left"><NA></td>
    <td class="gt_row gt_left">five</td>
    <td class="gt_row gt_right">2015-05-15</td>
    <td class="gt_row gt_right">17:55</td>
    <td class="gt_row gt_right">2018-05-05 04:00</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right">1325.81</td>
    <td class="gt_row gt_left">row_5</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">fig</td>
    <td class="gt_row gt_left">six</td>
    <td class="gt_row gt_right">2015-06-15</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">2018-06-06 16:11</td>
    <td style="color: #FFFFFF; background-color: #445e00;" class="gt_row gt_right">13.255</td>
    <td class="gt_row gt_left">row_6</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">777000.0</td>
    <td class="gt_row gt_left">grapefruit</td>
    <td class="gt_row gt_left">seven</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">19:10</td>
    <td class="gt_row gt_right">2018-07-07 05:22</td>
    <td style="color: #FFFFFF; background-color: #0000FF;" class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">row_7</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">8880000.0</td>
    <td class="gt_row gt_left">honeydew</td>
    <td class="gt_row gt_left">eight</td>
    <td class="gt_row gt_right">2015-08-15</td>
    <td class="gt_row gt_right">20:20</td>
    <td class="gt_row gt_right"><NA></td>
    <td style="color: #FFFFFF; background-color: #027f00;" class="gt_row gt_right">0.44</td>
    <td class="gt_row gt_left">row_8</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_exibble_snap_5
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td class="gt_row gt_left">one</td>
    <td class="gt_row gt_right">2015-01-15</td>
    <td class="gt_row gt_right">13:35</td>
    <td class="gt_row gt_right">2018-01-01 02:22</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
    <td class="gt_row gt_left">row_1</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td class="gt_row gt_left">two</td>
    <td class="gt_row gt_right">2015-02-15</td>
    <td class="gt_row gt_right">14:40</td>
    <td class="gt_row gt_right">2018-02-02 14:33</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
    <td class="gt_row gt_left">row_2</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td class="gt_row gt_left">three</td>
    <td class="gt_row gt_right">2015-03-15</td>
    <td class="gt_row gt_right">15:45</td>
    <td class="gt_row gt_right">2018-03-03 03:44</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
    <td class="gt_row gt_left">row_3</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td class="gt_row gt_left">four</td>
    <td class="gt_row gt_right">2015-04-15</td>
    <td class="gt_row gt_right">16:50</td>
    <td class="gt_row gt_right">2018-04-04 15:55</td>
    <td style="color: #FFFFFF; background-color: #673598;" class="gt_row gt_right">65100.0</td>
    <td class="gt_row gt_left">row_4</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">5550.0</td>
    <td class="gt_row gt_left"><NA></td>
    <td class="gt_row gt_left">five</td>
    <td class="gt_row gt_right">2015-05-15</td>
    <td class="gt_row gt_right">17:55</td>
    <td class="gt_row gt_right">2018-05-05 04:00</td>
    <td style="color: #000000; background-color: #fefe01;" class="gt_row gt_right">1325.81</td>
    <td class="gt_row gt_left">row_5</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">fig</td>
    <td class="gt_row gt_left">six</td>
    <td class="gt_row gt_right">2015-06-15</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">2018-06-06 16:11</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">13.255</td>
    <td class="gt_row gt_left">row_6</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">777000.0</td>
    <td class="gt_row gt_left">grapefruit</td>
    <td class="gt_row gt_left">seven</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">19:10</td>
    <td class="gt_row gt_right">2018-07-07 05:22</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">row_7</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">8880000.0</td>
    <td class="gt_row gt_left">honeydew</td>
    <td class="gt_row gt_left">eight</td>
    <td class="gt_row gt_right">2015-08-15</td>
    <td class="gt_row gt_right">20:20</td>
    <td class="gt_row gt_right"><NA></td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">0.44</td>
    <td class="gt_row gt_left">row_8</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_exibble_snap_6
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td class="gt_row gt_left">one</td>
    <td class="gt_row gt_right">2015-01-15</td>
    <td class="gt_row gt_right">13:35</td>
    <td class="gt_row gt_right">2018-01-01 02:22</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">49.95</td>
    <td class="gt_row gt_left">row_1</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td class="gt_row gt_left">two</td>
    <td class="gt_row gt_right">2015-02-15</td>
    <td class="gt_row gt_right">14:40</td>
    <td class="gt_row gt_right">2018-02-02 14:33</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">17.95</td>
    <td class="gt_row gt_left">row_2</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td class="gt_row gt_left">three</td>
    <td class="gt_row gt_right">2015-03-15</td>
    <td class="gt_row gt_right">15:45</td>
    <td class="gt_row gt_right">2018-03-03 03:44</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">1.39</td>
    <td class="gt_row gt_left">row_3</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td class="gt_row gt_left">four</td>
    <td class="gt_row gt_right">2015-04-15</td>
    <td class="gt_row gt_right">16:50</td>
    <td class="gt_row gt_right">2018-04-04 15:55</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">65100.0</td>
    <td class="gt_row gt_left">row_4</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">5550.0</td>
    <td class="gt_row gt_left"><NA></td>
    <td class="gt_row gt_left">five</td>
    <td class="gt_row gt_right">2015-05-15</td>
    <td class="gt_row gt_right">17:55</td>
    <td class="gt_row gt_right">2018-05-05 04:00</td>
    <td style="color: #000000; background-color: #fefe01;" class="gt_row gt_right">1325.81</td>
    <td class="gt_row gt_left">row_5</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">fig</td>
    <td class="gt_row gt_left">six</td>
    <td class="gt_row gt_right">2015-06-15</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">2018-06-06 16:11</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">13.255</td>
    <td class="gt_row gt_left">row_6</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">777000.0</td>
    <td class="gt_row gt_left">grapefruit</td>
    <td class="gt_row gt_left">seven</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">19:10</td>
    <td class="gt_row gt_right">2018-07-07 05:22</td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">row_7</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">8880000.0</td>
    <td class="gt_row gt_left">honeydew</td>
    <td class="gt_row gt_left">eight</td>
    <td class="gt_row gt_right">2015-08-15</td>
    <td class="gt_row gt_right">20:20</td>
    <td class="gt_row gt_right"><NA></td>
    <td style="color: #000000; background-color: #FF0000;" class="gt_row gt_right">0.44</td>
    <td class="gt_row gt_left">row_8</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_exibble_snap_7
  '''
  <tbody class="gt_table_body">
  <tr>
    <td class="gt_row gt_right">0.1111</td>
    <td class="gt_row gt_left">apricot</td>
    <td class="gt_row gt_left">one</td>
    <td class="gt_row gt_right">2015-01-15</td>
    <td class="gt_row gt_right">13:35</td>
    <td class="gt_row gt_right">2018-01-01 02:22</td>
    <td style="background-color: #ff0000;" class="gt_row gt_right">49.95</td>
    <td class="gt_row gt_left">row_1</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">2.222</td>
    <td class="gt_row gt_left">banana</td>
    <td class="gt_row gt_left">two</td>
    <td class="gt_row gt_right">2015-02-15</td>
    <td class="gt_row gt_right">14:40</td>
    <td class="gt_row gt_right">2018-02-02 14:33</td>
    <td style="background-color: #5c5200;" class="gt_row gt_right">17.95</td>
    <td class="gt_row gt_left">row_2</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">33.33</td>
    <td class="gt_row gt_left">coconut</td>
    <td class="gt_row gt_left">three</td>
    <td class="gt_row gt_right">2015-03-15</td>
    <td class="gt_row gt_right">15:45</td>
    <td class="gt_row gt_right">2018-03-03 03:44</td>
    <td style="background-color: #077c00;" class="gt_row gt_right">1.39</td>
    <td class="gt_row gt_left">row_3</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">444.4</td>
    <td class="gt_row gt_left">durian</td>
    <td class="gt_row gt_left">four</td>
    <td class="gt_row gt_right">2015-04-15</td>
    <td class="gt_row gt_right">16:50</td>
    <td class="gt_row gt_right">2018-04-04 15:55</td>
    <td style="background-color: #0000FF;" class="gt_row gt_right">65100.0</td>
    <td class="gt_row gt_left">row_4</td>
    <td class="gt_row gt_left">grp_a</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">5550.0</td>
    <td class="gt_row gt_left"><NA></td>
    <td class="gt_row gt_left">five</td>
    <td class="gt_row gt_right">2015-05-15</td>
    <td class="gt_row gt_right">17:55</td>
    <td class="gt_row gt_right">2018-05-05 04:00</td>
    <td style="background-color: #0000FF;" class="gt_row gt_right">1325.81</td>
    <td class="gt_row gt_left">row_5</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">fig</td>
    <td class="gt_row gt_left">six</td>
    <td class="gt_row gt_right">2015-06-15</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">2018-06-06 16:11</td>
    <td style="background-color: #445e00;" class="gt_row gt_right">13.255</td>
    <td class="gt_row gt_left">row_6</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">777000.0</td>
    <td class="gt_row gt_left">grapefruit</td>
    <td class="gt_row gt_left">seven</td>
    <td class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_right">19:10</td>
    <td class="gt_row gt_right">2018-07-07 05:22</td>
    <td style="background-color: #0000FF;" class="gt_row gt_right"><NA></td>
    <td class="gt_row gt_left">row_7</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  <tr>
    <td class="gt_row gt_right">8880000.0</td>
    <td class="gt_row gt_left">honeydew</td>
    <td class="gt_row gt_left">eight</td>
    <td class="gt_row gt_right">2015-08-15</td>
    <td class="gt_row gt_right">20:20</td>
    <td class="gt_row gt_right"><NA></td>
    <td style="background-color: #027f00;" class="gt_row gt_right">0.44</td>
    <td class="gt_row gt_left">row_8</td>
    <td class="gt_row gt_left">grp_b</td>
  </tr>
  </tbody>
  '''
# ---
# name: test_data_color_simple_df_snap
  '''
  <tbody class="gt_table_body">
  <tr>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1</td>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">10</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_left">one</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #ab4052;" class="gt_row gt_right">2</td>
    <td style="color: #000000; background-color: #e1be31;" class="gt_row gt_right">9</td>
    <td style="color: #FFFFFF; background-color: #9f3b4c;" class="gt_row gt_left">two</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #989a5b;" class="gt_row gt_right">3</td>
    <td style="color: #000000; background-color: #de5d71;" class="gt_row gt_right">8</td>
    <td style="color: #000000; background-color: #ad8560;" class="gt_row gt_left">three</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #4cbd81;" class="gt_row gt_right">4</td>
    <td style="color: #FFFFFF; background-color: #9653ca;" class="gt_row gt_right">7</td>
    <td style="color: #000000; background-color: #5aca60;" class="gt_row gt_left">four</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #239fe6;" class="gt_row gt_right">5</td>
    <td style="color: #000000; background-color: #27dae5;" class="gt_row gt_right">6</td>
    <td style="color: #000000; background-color: #2fa2c8;" class="gt_row gt_left">five</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #27dae5;" class="gt_row gt_right">6</td>
    <td style="color: #000000; background-color: #239fe6;" class="gt_row gt_right">5</td>
    <td style="color: #000000; background-color: #25bee5;" class="gt_row gt_left">six</td>
  </tr>
  <tr>
    <td style="color: #FFFFFF; background-color: #9653ca;" class="gt_row gt_right">7</td>
    <td style="color: #000000; background-color: #4cbd81;" class="gt_row gt_right">4</td>
    <td style="color: #000000; background-color: #49b7dd;" class="gt_row gt_left">seven</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #de5d71;" class="gt_row gt_right">8</td>
    <td style="color: #000000; background-color: #989a5b;" class="gt_row gt_right">3</td>
    <td style="color: #FFFFFF; background-color: #bf1ec0;" class="gt_row gt_left">eight</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #e1be31;" class="gt_row gt_right">9</td>
    <td style="color: #FFFFFF; background-color: #ab4052;" class="gt_row gt_right">2</td>
    <td style="color: #000000; background-color: #e57c55;" class="gt_row gt_left">nine</td>
  </tr>
  <tr>
    <td style="color: #000000; background-color: #9e9e9e;" class="gt_row gt_right">10</td>
    <td style="color: #FFFFFF; background-color: #000000;" class="gt_row gt_right">1</td>
    <td style="color: #000000; background-color: #daba3d;" class="gt_row gt_left">ten</td>
  </tr>
  </tbody>
  '''
# ---
